# Tax-App

./: Dockerfile  LICENSE  README.md  pyproject.toml
app/: __init__.py
app/templates/: compound.html  mortgage.html
tax_app/: __init__.py  main.py
tax_app/templates/: index.html  tax.html
